--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,4 @@
-
+/* 
 :root {
     --primary: #0463FA;
     --light: #EFF5FF;
@@ -460,4 +460,4 @@
 .testimonial-carousel .owl-nav .owl-next:hover {
     color: var(--dark);
 }
-
+ */
