--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -14,11 +14,13 @@ h4{
 .footer-section {
   background: #fff;
   position: relative;
+  margin-top: 110px;
 }
 .footer-cta {
     color: #fff;
   border-bottom: 1px solid #fff;
   background-color: #001883;
+  text-align: center;
 }
 .single-cta i {
   color: #ff5e14;
@@ -41,8 +43,10 @@ h4{
   font-size: 15px;
 }
 .footer-content {
+
   position: relative;
   z-index: 2;
+  margin: 48px;
 }
 .footer-pattern img {
   position: absolute;
@@ -53,8 +57,8 @@ h4{
   background-position: 100% 100%;
 }
 .footer-logo {
-  margin-bottom: 30px;
-  margin-top: 10px;
+  margin-bottom: -32px;
+  margin-top: -33px;
 }
 .footer-logo img {
     max-width: 200px;
